refactor: 한정자 변경 및 불필요한 코드 삭제
- sonar lint 적용하여 코드 리팩토링 수행
- 로직상 오류, 잘못된 한정자 적용 코드 수정